--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@craco/craco": "^6.1.1",
     "@testing-library/jest-dom": "^5.11.10",
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^12.8.3",
@@ -10,7 +11,10 @@
     "@types/node": "^12.20.10",
     "@types/react": "^17.0.3",
     "@types/react-dom": "^17.0.3",
+    "antd": "^4.15.2",
+    "craco-less": "^1.17.1",
     "eslint-config-prettier": "^8.2.0",
+    "jira-dev-tool": "^1.7.61",
     "qs": "^6.10.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -19,11 +23,11 @@
     "web-vitals": "^1.1.1"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
+    "start": "craco start",
+    "build": "craco build",
+    "test": "craco test",
     "eject": "react-scripts eject",
-    "json-server": "json-server __json_server_mock/db.json --watch --port 3001"
+    "json-server": "json-server __json_server_mock/db.json --watch --port 3001 --middlewares ./__json_server_mock/middleware.js"
   },
   "eslintConfig": {
     "extends": "react-app",
@@ -48,7 +52,11 @@
   "devDependencies": {
     "@commitlint/cli": "^12.1.1",
     "@commitlint/config-conventional": "^12.1.1",
+    "@types/qs": "^6.9.6",
     "json-server": "^0.16.3",
     "prettier": "2.2.1"
+  },
+  "msw": {
+    "workerDirectory": "public"
   }
 }
